Subdivide fails on newly created edge #32357

Closed
opened 2012-08-18 17:46:33 +02:00 by Tobias Oelgarte · 12 comments

%%%I appended an example file. If i open the file, select the two "free vertices", create an edge (F) and immediately call subdivide on it, then the subdivde operator does nothing. If i now deselect the vertices, select them again and use subdivide it works like it should.

Ubuntu 10.10 r49694%%%

%%%I appended an example file. If i open the file, select the two "free vertices", create an edge (F) and immediately call subdivide on it, then the subdivde operator does nothing. If i now deselect the vertices, select them again and use subdivide it works like it should. Ubuntu 10.10 r49694%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%PS: It only occurs in the case if the vertices already exist and are only connected to other edges (not part of a face).%%%

%%%PS: It only occurs in the case if the vertices already exist and are only connected to other edges (not part of a face).%%%

%%%Couldn't confirm this (tried in 2.63a and latest SVN). What version of Blender are you testing?%%%

%%%Couldn't confirm this (tried in 2.63a and latest SVN). What version of Blender are you testing?%%%

%%%managed to redo this, but only sometimes (maybe one in 5 times or so), ran in valgrind and its not reporting un-initialized memory.

need to look into this further.%%%

%%%managed to redo this, but only sometimes (maybe one in 5 times or so), ran in valgrind and its not reporting un-initialized memory. need to look into this further.%%%

%%%Notice: This does happen to other operators as well. Just created a circle, selected every nth-vertex and then tried to invert the selection (Strg+I). It did nothing. As soon i left edit mode and entered it again it was working as usual.%%%

%%%Notice: This does happen to other operators as well. Just created a circle, selected every nth-vertex and then tried to invert the selection (Strg+I). It did nothing. As soon i left edit mode and entered it again it was working as usual.%%%

%%%Couldn't confirm this (tried in blender rev 50102 32 bit, Windows 7).%%%

%%%Couldn't confirm this (tried in blender rev 50102 32 bit, Windows 7).%%%

%%%Hi, I can't reproduce this here, can you please try again on an
up-to-date SVN revision?%%%

%%%Hi, I can\'t reproduce this here, can you please try again on an up-to-date SVN revision?%%%

%%%I can still reproduce it on Ubuntu 10.10 32 bit with r50079 and r50104.

In r49694 i had it every time and with r50079 and r50104 it happens more or less randomly. I just need to extrude two lines (edge->vert->edge->vert->...) and make a connection (edge) in between them. In roughly 50% of the times i have this behavior. The error must be somewhere in the selection code (if the selection is changed by an opertor), because other operators fail as well.

My guess is the following: I can reproduce this bug in multiple ways, but it always involves a first call to operator that updates or changes the selection. Another condition is that none of the selected edges is connected to a face. So i would say that the edge selection status is not rightfully updated after the call to the first operator that changes the selection. The second operator must then see a wrong selection.%%%

%%%I can still reproduce it on Ubuntu 10.10 32 bit with r50079 and r50104. In r49694 i had it every time and with r50079 and r50104 it happens more or less randomly. I just need to extrude two lines (edge->vert->edge->vert->...) and make a connection (edge) in between them. In roughly 50% of the times i have this behavior. The error must be somewhere in the selection code (if the selection is changed by an opertor), because other operators fail as well. My guess is the following: I can reproduce this bug in multiple ways, but it always involves a first call to operator that updates or changes the selection. Another condition is that none of the selected edges is connected to a face. So i would say that the edge selection status is not rightfully updated after the call to the first operator that changes the selection. The second operator must then see a wrong selection.%%%

%%%PS: Invert selection seams also to miss some vertices on more complex meshes after i used "Select inner region". The obviously something strange happening inside the selection code.%%%

%%%PS: Invert selection seams also to miss some vertices on more complex meshes after i used "Select inner region". The obviously something strange happening inside the selection code.%%%

%%%I think it gets a really serious issue. Even x-mirror is affected in such cases, not being able to find the mirrored vertex which is exactly at the right place. :(%%%

%%%I think it gets a really serious issue. Even x-mirror is affected in such cases, not being able to find the mirrored vertex which is exactly at the right place. :(%%%

%%%the newly created edge wasn't selected (only its verts were). fixed r50190.%%%

%%%the newly created edge wasn't selected (only its verts were). fixed r50190.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32357
No description provided.