fix [#32357] Subdivide fails on newly created edge

problem since bmesh merge, new edges were not selected.